Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103742

QVectorIterator & QMutableVectorIterator CamelCase headers missing

XMLWordPrintable

    • 34cb03da89 (qt/qtbase/dev) 34cb03da89 (qt/tqtc-qtbase/dev) f499ef159e (qt/qtbase/6.3) f499ef159e (qt/tqtc-qtbase/6.3) f499ef159e (qt/qtbase/6.3.1) f499ef159e (qt/tqtc-qtbase/6.3.1) 920d971327 (qt/tqtc-qtbase/6.2)

      While there is a compatibility forwarding header "QVector" provided by QtCore, the companion "QVectorIterator" & "QMutableVectorIterator" are not present, other than in Qt5. Which spoils the compatibility experience a bit for code still using QVector-named classes in their Qt5-era written code, as the build now breaks due to include statements no longer working.

      So for consistency in the experience, it would be nice if code using the alias names QVectorIterator & QMutableVectorIterator in the code matching includes #include <QVectorIterator> and #include <QMutableVectorIterator> would also work, like it does with #include <QVector>.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            kossebau Friedrich W. H. Kossebau
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes