QVector: make sure the forwarding headers for the Java iterators exist

They used to in Qt 5. And now they do again:

 $ grep . include/QtCore/Q*Vector*
 include/QtCore/QMutableVectorIterator:#include "qvector.h"
 include/QtCore/QVector:#include "qvector.h"
 include/QtCore/QVectorIterator:#include "qvector.h"

Fixes: QTBUG-103742
Change-Id: I77c8221eb2824c369feffffd16f128a983f4866c
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit 34cb03da89188c8c6566681a2c2548731b007099)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>